feat: Add UI for game options screen

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -9,6 +9,16 @@
         android:id="@+id/mainMenuFragment"
         android:name="com.basik.balda.view.fragments.MainMenuFragment"
         android:label="MainMenuFragment"
-        tools:layout="@layout/fragment_main_menu"/>
+        tools:layout="@layout/fragment_main_menu">
+        <action
+            android:id="@+id/toGameOptions"
+            app:destination="@id/gameOptionsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/gameOptionsFragment"
+        android:name="com.basik.balda.view.fragments.game_options.GameOptionsFragment"
+        android:label="GameOptionsFragment"
+        tools:layout="@layout/fragment_game_options"/>
 
 </navigation>
