--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -41,6 +41,7 @@
                     android:text="@string/start_game_with_android"/>
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/startGameWithFriends"
                     style="@style/MaterialButtonStyle.MainMenuButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
